Add basic template for demineur

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,8 @@ Hello world!
 Number is {{ to_show }}, {{ i }}<br />
 {% endfor %}
 
+<a href = "/games/demineur">DEMINEUR</a>
+
 </body>
 
 </html>
