mine_sweeper: Add color to sweep

--- a/templates/demineur.html
+++ b/templates/demineur.html
@@ -4,7 +4,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script type="text/javascript" src="/files/jquery_extend_api.js"></script>
     <script type="text/javascript" src="/files/mine_sweeper.js"></script>
-    <script type="text/stylesheet" src="/files/mine_sweeper.css"></script>
+    <link rel="stylesheet" type="text/css" href="/files/mine_sweeper.css">
 </head>
 
 <body>
