--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,10 @@
+<!DOCTYPE html>
 <html>
-
+<head>
+    <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
+    <script src="mouse.js"></script>
+</head>
 <body>
-Hello world!
-Hello world!
-<br />
-{% for i in [1, 2, 3] %}
-Number is {{ to_show }}, {{ i }}<br />
-{% endfor %}
 
 </body>
-
 </html>
