--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1,56 +1,47 @@
-<b>CHAT</b>
-<br />
+<!DOCTYPE html>
+  <html lang="en">
+  <head>
+    <title>Flask_Chat_App</title>
+  </head>
+  <body>
 
-<div id="chatMessagesList">
+    <h3 style='color: #ccc;font-size: 30px;'>No message yet..</h3>
+    <div class="message_holder"></div>
 
-{% for message in chat.messages %}
+    <form action="" method="POST">
+      <input type="text" class="username" placeholder="User Name"/>
+      <input type="text" class="message" placeholder="Messages"/>
+      <input type="submit"/>
+    </form>
 
-    <div class="chatMessage">{{ message.author }} : {{ message.content }}</div>
-
-{% endfor %}
-
-</div>
-
-<input type="text" id="message-input" value="" />
-<br />
-<input type="button" onClick="postMessage()" value="SEND" />
-
-<script>
-var messagesList = document.getElementById("chatMessagesList")
-var msgInput = document.getElementById("message-input")
-var author = "LYON"
-
-function postMessage() {
-    var msg = msgInput.value
-    if (msg != "") {
-        var xhttp = new XMLHttpRequest();
-        xhttp.onreadystatechange = function() {
-            if (this.readyState == 4 && this.status == 200) {
-                if (this.responseText == "OK") {
-                    // Update the message list
-                    var newMessage = document.createElement("div");
-                    newMessage.appendChild(document.createTextNode(author + " : " + msg))
-                    messagesList.appendChild(newMessage)
-                }
-            }
-        };
-        xhttp.open("POST", "/chat/api/add", true);
-        xhttp.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
-        xhttp.send(JSON.stringify({
-            "message": msg,
-            "author": author
-        }));
-    }
-}
-
-// Intercept the Enter event to send the message
-window.addEventListener("keydown",function (e) {
-    if (e.keyCode === 13) {
-            e.preventDefault();
-            postMessage();
-            msgInput.value = "";
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.min.js"></script>
+    <script type="text/javascript">
+      var socket = io.connect('http://' + document.domain + ':' + location.port);
+      socket.on( 'connect', function() {
+        socket.emit( 'my event', {
+          data: 'User Connected'
+        } )
+        var form = $( 'form' ).on( 'submit', function( e ) {
+          e.preventDefault()
+          let user_name = $( 'input.username' ).val()
+          let user_input = $( 'input.message' ).val()
+          socket.emit( 'my event', {
+            user_name : user_name,
+            message : user_input
+          } )
+          $( 'input.message' ).val( '' ).focus()
+        } )
+      } )
+      socket.on( 'my response', function( msg ) {
+        console.log( msg )
+        if( typeof msg.user_name !== 'undefined' ) {
+          $( 'h3' ).remove()
+          $( 'div.message_holder' ).append( '<div><b style="color: #000">'+msg.user_name+'</b> '+msg.message+'</div>' )
         }
-    }
-)
+      })
+    </script>
 
-</script>
+  </body>
+  </html>
