--- a/templates/demineur.html
+++ b/templates/demineur.html
@@ -18,13 +18,20 @@ Print a Size by Size grid and return the position on click
 -->
 
     <body>
-        <div id="game_config">
-            <form action="PayslipServlet" method="get">
+        <div>
+            <form id="game_config" action="PayslipServlet" method="get">
                 Size (between 10 and 40): <input type="number" name="size" id="size" min="10" max="40"><br /> Nb_Bomb (between 1 and 40): <input type="number" name="nb_bomb" id="nb_bomb" min="1" max="40"><br />
                 <span id="result"></span><br />
-                <input type="button" value="GO !" id="GO">
+                <input type="button" value="Start !" id="GO">
             </form>
-            <div id="game_board"></div>
+            <div id="game_waiting" style="display:none">
+                <button id="user_ready">Let's GO</button>
+                <div id="countdown"></div>
+            </div>
+            <div id="game_board"  style="display:none">
+                <div id="user_board" class="half_container"></div>
+                <div id="opponent_board" class="half_container"></div>
+            </div>
         </div>
     </body>
 </body>
