--- a/templates/store.html
+++ b/templates/store.html
@@ -1,35 +1,116 @@
-<html>
-<head>
-    <link rel="stylesheet" href="/files/store.css">
-</head>
+{% extends "index.html"%}
+{% block head %}
+{% endblock %}
 
+{% block body %}
+<div id="containerSnap">
+    Image Lyon
+</div>
 
-
-<body>
-
-JEUX 
-
-<div id="game-gallery">
-    <div class="game"> 
-        <input type="image" id="image" alt=""
-            src="/files/resources/Demineur.png"
-            width="100"
-            height="100">
-        <p>Démineur</p>
-    </div>
-
-    <div class="game">
-        <input type="image" id="image" alt=""
-            src="/files/resources/codenames.jpg"
-            width="100"
-            height="100">
-        <p>Code Names</p>
-    </div>
-
+<div id="containerAnnounce">
 
 </div>
 
+<div id="containerGames">
+        Back to video chat
+</div>
+
+<div id="containerGamesGallery">
+        Games Gallery
+        <br />
+        <br />
+            <div>
+                <img src="/files/resources/Demineur.png" width=100 height="100" >
+                <p>Démineur</p>
+            </div>
+        
+            <div>
+                <img src="/files/resources/codenames.jpg"  width=100 height="100">
+                <p>Code Names</p>
+            </div>
+</div>
 
 
-</body>
-</html>
+<div id="containerHighScoreDemineur">
+        High score Démineur
+</div>
+
+<div id="containerHighScoreCodenames">
+        High score CodeNames
+</div>
+
+</div>
+
+<div id="containerCam">
+    <video autoplay="true" id="video"></video>
+</div>
+
+<div id="containerChat">
+        Chat
+    </div>
+
+
+
+<script>
+    jQuery["getJSON"] = function( url, callback ) {
+        // shift arguments if data argument was omitted
+
+        return jQuery.ajax({
+            url: url,
+            type: "GET",
+            contentType:"application/json; charset=utf-8",
+            crossDomain:true,
+            headers: {
+                'Access-Control-Allow-Origin': '*'
+            },
+            success: callback
+        });
+    };
+</script>
+<script>
+    var video = document.querySelector("#video");
+    if (navigator.mediaDevices.getUserMedia) {
+    navigator.mediaDevices.getUserMedia({ video: true })
+    .then(function (stream) {
+    video.srcObject = stream;
+    })
+    .catch(function (err0r) {
+    console.log("Something went wrong!");
+    });
+    }
+</script>
+<script>
+    var time_today = Date.now();
+    var date_today = new Date(27043200*1000);
+
+    var month = date_today.getMonth()+1;
+    var day = date_today.getDate();
+
+    $.getJSON('https://trombi.corp.netatmo.com//api/persons', function(data){
+        persons = JSON.parse(data);
+
+        var birthdays = [];
+        for (const p of persons) {
+            date_birthday = new Date(p.birthday*1000);
+            if (date_birthday.getMonth()+1 == month && date_birthday.getDate() == day){
+                birthdays.push(p);
+            }
+        }
+        if (birthdays.length==0)
+        {
+            $('#containerAnnounce').text("Bienvenu sur Boulynk !");
+        }
+        else
+        {
+            $('#containerAnnounce').append("Aujourd'hui c'est l'anniversaire de : ");
+            for (const p of birthdays) {
+                $('#containerAnnounce').append(p.name+" ");
+            }
+            $('#containerAnnounce').append("!");
+        }
+
+    });
+</script>
+{% endblock %}
+
+
