Add game link in index

--- a/templates/main.html
+++ b/templates/main.html
@@ -17,6 +17,8 @@
 </div>
 <div id="containerGames">
     Games
+    <br/>
+    <a href="/games/demineur">DEMINEUR</a><br/>
 </div>
 <script>
     jQuery["getJSON"] = function( url, callback ) {
