--- a/static/styles.css
+++ b/static/styles.css
@@ -97,3 +97,25 @@
     text-align: center;
     border-radius: 15px;
 }
+#left {
+    position:absolute;
+    height: 100%;
+    width: 20%;
+    top: 0%;
+    left: 0%;
+    background-color: #C4C4C4;
+    z-index:1;
+    text-align: center;
+    border-radius: 15px;
+}
+#right {
+    position:absolute;
+    height: 100%;
+    width: 80%;
+    top: 0%;
+    left: 20%;
+    background-color: #000000;
+    z-index:1;
+    text-align: center;
+    border-radius: 15px;
+}
