--- a/templates/main.html
+++ b/templates/main.html
@@ -10,15 +10,9 @@
     <video autoplay="true" id="video"></video>
 </div>
 <div id="containerAnnounce">
-
-</div>
-<div id="containerChat">
-    {% include 'chat.html' %}
 </div>
 <div id="containerGames">
-    Games
-    <br/>
-    <a href="/games/demineur">DEMINEUR</a><br/>
+    <a href="/store"><img src="/static/images/game_header.png" /></a><br/>
 </div>
 <script>
     jQuery["getJSON"] = function( url, callback ) {
