add link and images

--- a/templates/store.html
+++ b/templates/store.html
@@ -12,7 +12,12 @@
 </div>
 
 <div id="containerGames">
-        Back to video chat
+
+    <a href="/" >
+        <img src="/static/images/chat_header.png" width="100%" height = "100%" display="block">
+
+    </a>
+        
 </div>
 
 <div id="containerGamesGallery">
@@ -20,7 +25,9 @@
         <br />
         <br />
             <div>
+                <a href="/games" >
                 <img src="/files/resources/Demineur.png" width=100 height="100" >
+                </a>
                 <p>Démineur</p>
             </div>
         
