--- a/templates/mine_sweeper.css
+++ b/templates/mine_sweeper.css
@@ -40,15 +40,29 @@
     display: flex;
     flex-direction: row;
     height: 30px;
+    line-height: 30px;
     padding: 0;
     margin: 0;
-    line-height: 30px;
+}
+
+#user_board .mine {
+    width: 30px;
+    height: 30px;
+}
+
+#opponent_board .mine {
+    width: 15px;
+    height: 15px;
+    line-height: 15px;
+    font-size: 11px;
+}
+
+#opponent_board .mine_row {
+    height: 15px;
 }
 
 .mine {
     border: 1px solid black;
-    width: 30px;
-    height: 30px;
     padding: 0;
     margin: 0;
     text-align: center;
@@ -59,7 +73,7 @@
     background-color: #efe6e1;
 }
 
-.mine.odd {
+.mine.even {
     background-color: #e1d5c6;
 }
 
