--- a/templates/store.html
+++ b/templates/store.html
@@ -17,7 +17,7 @@
         <img src="/static/images/chat_header.png" width="100%" height = "100%" display="block">
 
     </a>
-        
+
 </div>
 
 <div id="containerGamesGallery">
@@ -25,15 +25,17 @@
         <br />
         <br />
             <div>
-                <a href="/games" >
+                <a href="/games/demineur" >
                 <img src="/files/resources/Demineur.png" width=100 height="100" >
                 </a>
                 <p>Démineur</p>
             </div>
-        
+
             <div>
+                <a href="/games/codenames" >
                 <img src="/files/resources/codenames.jpg"  width=100 height="100">
                 <p>Code Names</p>
+                </a>
             </div>
 </div>
 
@@ -51,10 +53,6 @@
 <div id="containerCam">
     <video autoplay="true" id="video"></video>
 </div>
-
-<div id="containerChat">
-        Chat
-    </div>
 
 
 
