--- a/templates/games.html
+++ b/templates/games.html
@@ -1,4 +1,18 @@
 {% extends "index.html"%}
+
+{% block head %}
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js"></script>
+    <script type="text/javascript" src="/files/jquery_extend_api.js"></script>
+    <script type="text/javascript" src="/files/config.js"></script>
+    <script type="text/javascript" src="/files/login.js"></script>
+    <script type="text/javascript" src="/files/mine_sweeper.js"></script>
+    <link rel="stylesheet" type="text/css" href="/files/animation.css">
+    <link rel="stylesheet" type="text/css" href="/files/mine_sweeper.css">
+
+{% endblock %}
+
 {% block body %}
         <script>
                 jQuery["getJSON"] = function( url, callback ) {
