js: Remove useless import

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.min.js"></script>
   <script type="text/javascript" src="/files/jquery_extend_api.js"></script>
 
+  <script type="text/javascript" src="/files/config.js"></script>
 
     {% block head %} {% endblock %}
 </head>
