--- a/templates/store.html
+++ b/templates/store.html
@@ -21,31 +21,41 @@
 </div>
 
 <div id="containerGamesGallery">
-        Games Gallery
+        <b><font size="+2">Games</font></b>
         <br />
         <br />
             <div>
-                <a href="/games/demineur" >
-                <img src="/files/resources/Demineur.png" width=100 height="100" >
+                <a href="/games" >
+                <img src="/static/images/mine.png" width=120 height="120" >
                 </a>
-                <p>Démineur</p>
+                <p>Minesweeper</p>
             </div>
 
             <div>
-                <a href="/games/codenames" >
-                <img src="/files/resources/codenames.jpg"  width=100 height="100">
+                <img src="/static/images/codename.png"  width=120 height="120">
                 <p>Code Names</p>
                 </a>
+            </div>
+
+            <div>
+                    <img src="/static/images/flappy.png"  width=120 height="120">
+                    <p>Flappy Bird</p>
             </div>
 </div>
 
 
 <div id="containerHighScoreDemineur">
-        High score Démineur
+        <b><font size="+1">Best score - Minesweeper</font></b>
+        <br />
+        <br />
+        <img src="/static/images/score.png" width=30 height="30" align ="left" hspace =10> <span style="float: left;">Fred Potter</span>  <b><font color="blue"><span style="float:right;">3456</span></font></b>
 </div>
 
 <div id="containerHighScoreCodenames">
-        High score CodeNames
+        <b><font size="+1">Best performance - Code Names</font></b>
+        <br />
+        <br />
+        <img src="/static/images/find.png" width=30 height="30" align ="left" hspace =10> <span style="float: left;"></span>Guessed words</span> <b><font color="blue"><span style="float:right;">150</span></font></b>
 </div>
 
 </div>
