--- a/templates/store.html
+++ b/templates/store.html
@@ -25,7 +25,7 @@
         <br />
         <br />
             <div>
-                <a href="/games" >
+                <a href="/games/demineur" >
                 <img src="/static/images/mine.png" width=120 height="120" >
                 </a>
                 <p>Minesweeper</p>
