--- a/templates/store.html
+++ b/templates/store.html
@@ -39,7 +39,7 @@
 
             <div>
                     <img src="/static/images/flappy.png"  width=120 height="120">
-                    <p>Flappy Bird</p>
+                    <p>Wind Bird</p>
             </div>
 </div>
 
@@ -48,7 +48,7 @@
         <b><font size="+1">Best score - Minesweeper</font></b>
         <br />
         <br />
-        <img src="/static/images/score.png" width=30 height="30" align ="left" hspace =10> <span style="float: left;">Fred Potter</span>  <b><font color="blue"><span style="float:right;">3456</span></font></b>
+        <img src="/static/images/score.png" width=30 height="30" align ="left" hspace =10> <span style="float: left;">Sir Guilhem 1</span>  <b><font color="blue"><span style="float:right;">3456</span></font></b>
 </div>
 
 <div id="containerHighScoreCodenames">
@@ -56,6 +56,13 @@
         <br />
         <br />
         <img src="/static/images/find.png" width=30 height="30" align ="left" hspace =10> <span style="float: left;"></span>Guessed words</span> <b><font color="blue"><span style="float:right;">150</span></font></b>
+</div>
+
+<div id="containerHighScoreWindBird">
+        <b><font size="+1">Best performance - Wind Bird</font></b>
+        <br />
+        <br />
+        <img src="/static/images/score.png" width=30 height="30" align ="left" hspace =10> <span style="float: left;"></span>Chloédouard</span> <b><font color="blue"><span style="float:right;">6</span></font></b>
 </div>
 
 </div>
