mine_sweeper: Smaller size

--- a/templates/demineur.html
+++ b/templates/demineur.html
@@ -4,15 +4,15 @@
     <div class="gameBackground">
             <div id="game_config" class="half_container">
                 <form action="PayslipServlet" method="get">
-                    <p>
+                    <span>
                         Width: <input type="number" name="width" id="width" value=20 min="10" max="30">
-                    </p>
-                    <p>
+                    </span>
+                    <span>
                         Height: <input type="number" name="height" id="height" value=30 min="10" max="50">
-                    </p>
-                    <p>
+                    </span>
+                    <span>
                         Number of mines: <input type="number" name="nb_bomb" id="nb_bomb" min="1" value="10" max="100">
-                    </p>
+                    </span>
                     <input type="button" value="Start !" id="GO">
                 </form>
             </div>
