--- a/templates/mine_sweeper.css
+++ b/templates/mine_sweeper.css
@@ -27,11 +27,12 @@
 }
 
 #final_screen img {
-    max-height: 700px;
-    min-height: 700px;
+    max-height: 400px;
+    min-height: 400px;
 }
 
 .mine_field {
+    width:80%;
     top: 0;
     position: absolute;
 }
@@ -39,28 +40,39 @@
 .mine_row {
     display: flex;
     flex-direction: row;
-    height: 30px;
-    line-height: 30px;
+    width:100%;
     padding: 0;
     margin: 0;
 }
-
+#opponent_board {
+    padding:20px;
+}
+#user_board {
+    padding:20px;
+}
 #user_board .mine {
-    width: 30px;
-    height: 30px;
 }
 
 #opponent_board .mine {
-    width: 15px;
-    height: 15px;
-    line-height: 15px;
     font-size: 11px;
 }
 
 #opponent_board .mine_row {
     height: 15px;
 }
+.square {
+    position: relative;
+    flex:1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
+.square:after {
+content: "";
+display: block;
+padding-bottom: 100%;
+}
 .mine {
     border: 1px solid black;
     padding: 0;
