mine_sweeper: Fix default size and visibility

--- a/templates/demineur.html
+++ b/templates/demineur.html
@@ -8,17 +8,13 @@
                         Width: <input type="number" name="width" id="width" value=20 min="10" max="30">
                     </span>
                     <span>
-                        Height: <input type="number" name="height" id="height" value=30 min="10" max="50">
+                        Height: <input type="number" name="height" id="height" value=12 min="10" max="50">
                     </span>
                     <span>
-                        Number of mines: <input type="number" name="nb_bomb" id="nb_bomb" min="1" value="10" max="100">
+                        Number of mines: <input type="number" name="nb_bomb" id="nb_bomb" min="1" value="20">
                     </span>
                     <input type="button" value="Start !" id="GO">
                 </form>
-            </div>
-            <div id="game_waiting" style="display:none">
-                <button id="user_ready">Let's GO</button>
-                <div id="countdown"></div>
             </div>
             <div id="game_board"  style="display:none">
                 <div id="user_board" style="flex:3;position:relative" class="half_container"></div>
