--- a/templates/games.html
+++ b/templates/games.html
@@ -14,7 +14,7 @@
 
 </div>
 <div id="containerCam">
-    TO DO
+    <img src="/static/images/superphoto.jpg" />
 </div>
 <script>
     var time_today = Date.now();
@@ -48,11 +48,17 @@
 
     });
 </script>
-<div id="containerAnnounce">
-</div>
-<div id="containerGameScreen">
-        {% block gamebody %}{% endblock %}
-</div>
-<div id="containerGameInfo">
-</div>
+        <div id="containerAnnounce">
+        </div>
+        <div id="containerGameScreen">
+        </div>
+        <div id="containerGameInfo">
+            <img id="imageScore" src="/static/images/score-mine-2.png" alt="" />
+        </div>
+        <div id="containerRestartButton">
+            <img id="imageRestart" src="/static/images/restart.png" alt="" /> Restart
+        </div>
+        <div id="containerGamesButton">
+            <img id="imageBack" src="/static/images/back.png" alt="" /> Back to games
+        </div>
 {% endblock %}
